fixed img overflow

--- a/src/home/_plantsList.scss
+++ b/src/home/_plantsList.scss
@@ -36,6 +36,7 @@
     top: 15px;
     left: 10px;
     transition: .5s;
+    overflow: hidden;
 
     &:hover {
       transform: scale(1.1);
